--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nativescript-ar",
-  "version": "2.0.0",
+  "name": "@bezlepkin/nativescript-ar",
+  "version": "1.0.4",
   "description": "NativeScript Augmented Reality plugin. ARKit on iOS and (with the help of Sceneform) ARCore on Android.",
   "main": "ar",
   "typings": "index.d.ts",
@@ -38,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/eddyverbruggen/nativescript-ar.git"
+    "url": "git+https://github.com/Bezlepkin/nativescript-ar.git"
   },
   "keywords": [
     "ecosystem:nativescript",
@@ -51,24 +51,19 @@
     "ARCore",
     "Augmented Reality"
   ],
-  "author": {
-    "name": "Eddy Verbruggen",
-    "email": "eddyverbruggen@gmail.com",
-    "url": "https://github.com/eddyverbruggen"
-  },
+  "author": "Eddy Verbruggen <eddyverbruggen@gmail.com> (https://github.com/eddyverbruggen)",
   "bugs": {
     "url": "https://github.com/EddyVerbruggen/nativescript-ar/issues"
   },
   "license": "MIT",
   "homepage": "https://github.com/EddyVerbruggen/nativescript-ar",
-  "readmeFilename": "README.md",
   "devDependencies": {
     "nativescript-dev-typescript": "~0.10.0",
-    "rimraf": "^2.5.0",
-    "@nativescript/core": "~7.0.13",
-    "@nativescript/types": "~7.0.4",
-    "tslint": "~5.4.3",
-    "typescript": "~4.0.5"
+    "rimraf": "^3.0.2",
+    "@nativescript/core": "~7.1.4",
+    "@nativescript/types": "~7.1.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.1.3"
   },
   "dependencies": {},
   "bootstrapper": "nativescript-plugin-seed"
